{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 26,
  "lineage": "65d5f957-cfe6-3929-c8e4-bb25503d9c6c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:network-acl/acl-0a7bbce534593d7cb",
            "default_network_acl_id": "acl-0a7bbce534593d7cb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a7bbce534593d7cb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "048702943242",
            "subnet_ids": [
              "subnet-00e61782878a61216",
              "subnet-04b6b865058f39681",
              "subnet-08296635fd0d85c73",
              "subnet-08952ada3f59b51fa",
              "subnet-0b7b68e679969ddad",
              "subnet-0d383ce57bfb148c4"
            ],
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-default",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-default",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:route-table/rtb-07199a67a174112b1",
            "default_route_table_id": "rtb-07199a67a174112b1",
            "id": "rtb-07199a67a174112b1",
            "owner_id": "048702943242",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-default",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-default",
              "Owner": "Harsh"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:security-group/sg-081ec823652c4879f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-081ec823652c4879f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "048702943242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-default",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-default",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bab84998c018ca55",
            "domain": "vpc",
            "id": "eipalloc-0bab84998c018ca55",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-208-43.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.208.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-ap-south-1a",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-ap-south-1a",
              "Owner": "Harsh"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:internet-gateway/igw-0a3a6a96d9f718944",
            "id": "igw-0a3a6a96d9f718944",
            "owner_id": "048702943242",
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bab84998c018ca55",
            "association_id": "eipassoc-0e388c9e4a473e1e0",
            "connectivity_type": "public",
            "id": "nat-0c7236c88201261a0",
            "network_interface_id": "eni-0dae251baf74a8573",
            "private_ip": "10.1.3.197",
            "public_ip": "3.6.208.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00e61782878a61216",
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-ap-south-1a",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-ap-south-1a",
              "Owner": "Harsh"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0acf41c548def5eb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c7236c88201261a0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0acf41c548def5eb2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a3a6a96d9f718944",
            "id": "r-rtb-0f5eb685223a438671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f5eb685223a43867",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:route-table/rtb-094e34e8a4bc209fd",
            "id": "rtb-094e34e8a4bc209fd",
            "owner_id": "048702943242",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-db",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-db",
              "Owner": "Harsh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:route-table/rtb-0acf41c548def5eb2",
            "id": "rtb-0acf41c548def5eb2",
            "owner_id": "048702943242",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-private",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-private",
              "Owner": "Harsh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:route-table/rtb-0f5eb685223a43867",
            "id": "rtb-0f5eb685223a43867",
            "owner_id": "048702943242",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-public",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "vpc-dev-tf-public",
              "Owner": "Harsh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f18adf49037183a",
            "route_table_id": "rtb-094e34e8a4bc209fd",
            "subnet_id": "subnet-08296635fd0d85c73"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069bc8146b6d700d8",
            "route_table_id": "rtb-094e34e8a4bc209fd",
            "subnet_id": "subnet-08952ada3f59b51fa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075180764cc15938e",
            "route_table_id": "rtb-0acf41c548def5eb2",
            "subnet_id": "subnet-04b6b865058f39681"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b28fd9835e08eb85",
            "route_table_id": "rtb-0acf41c548def5eb2",
            "subnet_id": "subnet-0d383ce57bfb148c4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a56fe35931dbe28",
            "route_table_id": "rtb-0f5eb685223a43867",
            "subnet_id": "subnet-00e61782878a61216"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f5926694fd4e2ff",
            "route_table_id": "rtb-0f5eb685223a43867",
            "subnet_id": "subnet-0b7b68e679969ddad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:subnet/subnet-08296635fd0d85c73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08296635fd0d85c73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048702943242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "Dev",
              "Name": "database-subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "database-subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:subnet/subnet-08952ada3f59b51fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08952ada3f59b51fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048702943242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "Dev",
              "Name": "database-subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "database-subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:subnet/subnet-04b6b865058f39681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b6b865058f39681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048702943242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "Dev",
              "Name": "private-subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "private-subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:subnet/subnet-0d383ce57bfb148c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d383ce57bfb148c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048702943242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "Dev",
              "Name": "private-subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "private-subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:subnet/subnet-00e61782878a61216",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e61782878a61216",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048702943242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "Dev",
              "Name": "public-subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "public-subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:subnet/subnet-0b7b68e679969ddad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7b68e679969ddad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "048702943242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "Dev",
              "Name": "public-subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "public-subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0418c0a22c3e679e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:048702943242:vpc/vpc-0418c0a22c3e679e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a7bbce534593d7cb",
            "default_route_table_id": "rtb-07199a67a174112b1",
            "default_security_group_id": "sg-081ec823652c4879f",
            "dhcp_options_id": "dopt-0d092b9c91acb6117",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0418c0a22c3e679e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07199a67a174112b1",
            "owner_id": "048702943242",
            "tags": {
              "Enviornment": "Dev",
              "Name": "VPC-Dev",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "Dev",
              "Name": "VPC-Dev",
              "Owner": "Harsh"
            }
          }
        }
      ]
    }
  ]
}